--- a/css/serra.css
+++ b/css/serra.css
@@ -102,67 +102,67 @@ ul{
 }
 
 .section-about{
-	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.03) !important;
 }
 
 .section-about-b{
 	background-image: url("../img/building2.jpg");
 	background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.1) !important;
+	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.03) !important;
 	background-attachment: scroll !important;
 }
 
 .section-mission{
 /* 	background-image: url("../img/mountain.jpg"); */
     background-color: var(--serra-blue) !important;
-	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-coaching{
 	background-image: url("../img/building2.jpg");
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-consulting{
 	background-image: url("../img/building2.jpg");
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-servicios{
 /* 	background-image: url("../img/2.jpg"); */
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-updates{
 /* 	background-image: url("https://picsum.photos/1280/720"); */
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 
 .section-mejora{
 	background-image: url("../img/building2.jpg");
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-gestion{
 	background-image: url("../img/building2.jpg");
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-riesgos{
 /* 	background-image: url("../img/building2.jpg"); */
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 }
 .section-sistemas{
 	background-image: url("../img/building2.jpg");
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 40pt 20pt rgb(0, 0, 0, 0.03) !important;
 	min-height: 130vh !important;
 }
 .section-contact{
 /* 	background-image: url("https://picsum.photos/1280/720"); */
     background-color: var(--serra-white) !important;
-	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.15) !important;
+	box-shadow: inset 0 0 20pt 10pt rgb(0, 0, 0, 0.03) !important;
 }
 
 /*--------------------END RESUME SECTIONS--------------------*/
@@ -616,6 +616,9 @@ input[type="button"]::-moz-focus-inner {
 @media (min-width: 992px) {
 	.w-100{
 		padding-right: 6rem;
+	}
+	#sideNav{
+		box-shadow: 0pt 0pt 10pt 10pt rgba(12, 12, 12, 0.04);
 	}
 	.serra-column-50{
 		width:50% !important;
